--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <!-- Cookie -->
         <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.css" />
     </head>
-    <body class="bg-gradient-to-br from-fontDanna via-bodyDanna to-navDanna">
+    <body class="bg-gradient-to-br from-fontDanna via-bodyDanna to-navDanna selection:bg-flashDanna selection:text-navDanna">
         <!------- 
         | NAVBAR |
          ------->
@@ -47,13 +47,13 @@
                     <li class="py-2 pl-3">
                         <div class="group">
                             <div class="flex">
-                                <a href="services/" class="font-medium text-lg text-zinc-300 relative after:scale-x-0 after:h-0.5 after:bottom-0 after:left-0 after:absolute after:origin-bottom-left after:transform after:ease-in-out after:duration-200 w-full after:w-full group-hover:after:scale-x-100 group-hover:after:origin-bottom-left after:bg-flashDanna hover:text-white  md:text-base lg:text-lg">Services</a>
+                                <a href="services/" class="font-medium text-lg text-zinc-300 relative after:scale-x-0 after:h-0.5 after:bottom-0 after:left-0 after:absolute after:origin-bottom-left after:transform after:ease-in-out after:duration-200 w-auto after:w-full group-hover:after:scale-x-100 group-hover:after:origin-bottom-left after:bg-flashDanna hover:text-white  md:text-base lg:text-lg">Services</a>
                             </div>
                         </div>
                     </li>
                     <li class="md:py-2 relative">
                         <div class=" pl-3 group">
-                            <button type="button" class="hidden font-medium text-lg text-zinc-300 relative after:scale-x-0 after:h-0.5 after:bottom-0 after:left-0 after:absolute after:origin-bottom-left after:transform after:ease-in-out after:duration-200 w-full after:w-full group-hover:after:scale-x-75 group-hover:after:origin-bottom-left after:bg-flashDanna hover:text-white transition duration-400 ease-in-out md:flex md:items-center md:text-base lg:text-lg" id="menu-button" aria-expanded="true" aria-haspopup="true">
+                            <button type="button" class="hidden font-medium text-lg text-zinc-300 relative after:scale-x-0 after:h-0.5 after:bottom-0 after:left-0 after:absolute after:origin-bottom-left after:transform after:ease-in-out after:duration-200 w-auto after:w-full group-hover:after:scale-x-75 group-hover:after:origin-bottom-left after:bg-flashDanna hover:text-white transition duration-400 ease-in-out md:flex md:items-center md:text-base lg:text-lg" id="menu-button" aria-expanded="true" aria-haspopup="true">
                                 Contact
                                 <svg class="ml-2 h-5 w-5 text-gray-400" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                                     <path fill-rule="evenodd" d="M5.23 7.21a.75.75 0 011.06.02L10 11.168l3.71-3.938a.75.75 0 111.08 1.04l-4.25 4.5a.75.75 0 01-1.08 0l-4.25-4.5a.75.75 0 01.02-1.06z" clip-rule="evenodd" />
@@ -68,7 +68,7 @@
                             </div>
                         </div>
                     </li>
-                    <li class="py-2 pl-3 relative  md:hidden">
+                    <li class="py-2 pl-3 group relative  md:hidden">
                         <button type="button" class="flex items-center font-medium text-lg text-zinc-300 hover:text-white" id="menu-button-phone" aria-controls="disclosure-1" aria-expanded="false">
                             Contact
                             <svg class="ml-2 h-5 w-5 text-gray-400" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
@@ -78,7 +78,7 @@
                         <div id="disclosure-1" class="hidden mt-2 space-y-2 transition duration-700 ease-in-out">
                             <a href="demande-de-devis/" class="block font-medium text-font2Danna py-1 leading-7 pl-3 hover:text-flashDanna transition duration-300 ease-in-out">Obtenir un devis gratuit</a>
                             <a href="tel:+33698118890" class="block font-medium text-gray-300 py-1 leading-7 pl-3 hover:text-white transition duration-300 ease-in-out">+33 6 98 11 88 90</a>
-                            <a href="" class="block font-medium text-gray-300 py-1 leading-7 pl-3 hover:text-white transition duration-300 ease-in-out">Nous écrire</a>
+                            <a href="contact/" class="block font-medium text-gray-300 py-1 leading-7 pl-3 hover:text-white transition duration-300 ease-in-out">Nous écrire</a>
                         </div>
                     </li>
                 </ul>
@@ -99,7 +99,7 @@
                     <h1 class="mb-2">
                         <span class=" inline-block text-fontDanna text-2xl font-black font-inter sm:text-4xl md:text-5xl lg:text-7xl xl:text-8xl" id="dynamic-prestation" >Conception Web</span>
                     </h1>
-                    <div class=" my-5 mx-auto text-gray-100 font-inter border border-black font-medium shadow-md w-40 p-2 bg-gradient-to-tr from-fontDanna to-bodyDanna rounded-md transition-all duration-200 delay-75  hover:scale-110    hover:text-white ease-in-out lg:text-xl lg:p-3 lg:my-9 lg:w-72">
+                    <div class=" my-5 mx-auto text-gray-100 font-inter border border-black font-medium shadow-md w-40 p-2 bg-gradient-to-tr from-fontDanna to-bodyDanna rounded-md transition-all duration-200 delay-75  hover:scale-110 hover:text-white ease-in-out lg:text-xl lg:p-3 lg:my-9 lg:w-72">
                         <a href="contact/">Contactez-nous</a>
                     </div>
                     <div class="absolute bottom-6 left-1/2 -translate-x-1/2 md:bottom-10 lg:bottom-28">
@@ -285,7 +285,7 @@
                     </div>
                 </div>
                 <div class="w-full h-12 flex items-center flex-col-reverse mt-10 mb-8">
-                    <a href="demande-de-devis/" class="flex justify-center items-center w-72 h-10 text-flashDanna  border-2 border-flashDanna hover:bg-flashDanna hover:text-navDanna hover:scale-105 transition-all duration-150 font-semibold uppercase">Besoin d'un devis ?</a>
+                    <a href="demande-de-devis/" class="flex justify-center items-center w-72 h-10 text-flashDanna border-double  border-2 border-flashDanna hover:bg-flashDanna hover:text-navDanna hover:scale-105 transition-all duration-150 font-semibold uppercase">Besoin d'un devis ?</a>
                 </div>
             </div>
          </section>
